[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.1.7"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
solana-program-test = "2.1.7"                      # Use the latest version
solana-sdk = "2.1.7"                               # Use the latest version
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
